feat(api-key): allow api key to access
